# salvador

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  salvador.cabal  stack.yaml
app/: Main.hs
dhall/: constructors.dhall  types.dhall
dhall/constructors/Definition/: Record.dhall
dhall/constructors/JSONType/: ListJSON.dhall  ReferenceJSON.dhall  ReferenceListJSON.dhall  ValueJSON.dhall
dhall/constructors/OptionalValidation/: AllowNull.dhall  AllowNullUndefinedMissing.dhall  AllowUndefinedMissing.dhall
dhall/constructors/ParameterType/: ListParameter.dhall  ValueParameter.dhall
dhall/constructors/PathSegment/: CapturePathSegment.dhall
dhall/constructors/Request/: Delete.dhall  Get.dhall  Patch.dhall  Post.dhall  Put.dhall
dhall/constructors/RequestBody/: ArbitraryRequestBody.dhall  RecordRequestBody.dhall
dhall/constructors/ResponseContent/: JSONResponse.dhall  NoContentResponse.dhall
dhall/constructors/Value/: DoubleValue.dhall  IntegerValue.dhall  NaturalValue.dhall  TextValue.dhall
dhall/types/: AnonymousRecord.dhall  CaptureSegment.dhall  Definition.dhall  Endpoint.dhall  EndpointDescription.dhall  Field.dhall  JSONContent.dhall  JSONType.dhall  LiteralSegment.dhall  Method.dhall  Module.dhall  NamedRecord.dhall  OptionalValidation.dhall  ParameterType.dhall  Path.dhall  PathSegment.dhall  QueryParameter.dhall  QueryParameterRequest.dhall  RecordDefinition.dhall  Request.dhall  RequestBody.dhall  RequestBodyRequest.dhall  Response.dhall  ResponseContent.dhall  Spec.dhall  Validation.dhall  Value.dhall  ValueType.dhall
dhall/types/OptionalValidation/: AllowNull.dhall  AllowNullUndefinedMissing.dhall  AllowUndefinedMissing.dhall
dhall/types/ParameterType/: ListParameter.dhall  ValueParameter.dhall
dhall/types/Value/: DoubleValue.dhall  IntegerValue.dhall  NaturalValue.dhall  TextValue.dhall
examples/: petstore.dhall
examples/petstore/: salvador.dhall
examples/petstore/api/: README.md
scripts/: format-all.sh  lint-all.sh
src/: Salvador.hs
src/Salvador/: CLI.hs  Documentation.hs  Markdown.hs  Spec.hs  Specification.hs
test/: Test.hs
test/examples/petstore/: salvador.dhall
